home page autocomplete fixes, categories spacing fixes

--- a/assets/scss/components/_categories.scss
+++ b/assets/scss/components/_categories.scss
@@ -121,7 +121,7 @@
         padding-bottom: 280px;
     }
     .other-categories {
-        margin-top: 60px;
+        margin-top: 45px;
 
         h2 {
             font-size: 13pt;
