--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -128,14 +128,8 @@ body {
       padding-left: 310px;
       padding-right: 10px;
       border-color: transparent;
-      //padding-right: 150px;
-      //box-shadow: 0px 11px 7px 0 rgba(0, 0, 0, 0.02);
-      //border: solid 2px #d8cdba;
-      //background-color: #fff;
-      //border-radius: 4px;
 
       &.is-hidden {
-        //padding-left: 190px;
         padding-left: 50px;
 
         &::placeholder {
@@ -854,6 +848,10 @@ body {
       h1 {
         font-size: 15pt !important;
       }
+    }
+
+    .categories-home-page {
+      padding-top: 35vh !important;
     }
   }
 
